# rust-trace-minimum

./: Cargo.toml  docker-compose.yml  otel-collector-config.yaml
src/: main.rs
