[package]
name = "rust-trace-minimum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
tokio = { version = "1.38.0", features = ["full"] }
sqlx = { version = "0.7", default-features = false, features = ["macros", "runtime-tokio", "mysql", "rust_decimal"] }
bcrypt = "0.15"
opentelemetry = { version = "0.26" }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio", "async-std"] }
opentelemetry-otlp = { version = "0.26", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.26"
tracing = "0.1"
tracing-core = "0.1.28"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.27"